--- a/files/tmux/.tmux.conf
+++ b/files/tmux/.tmux.conf
@@ -1,4 +1,9 @@
+# Ctrl + arrow keys to switch panes
 bind -n C-Up select-pane -U
 bind -n C-Down select-pane -D
 bind -n C-Left select-pane -L
 bind -n C-Right select-pane -R
+
+# Ctrl + b + % to split the current pane vertically
+# Ctrl + b + " to split the current pane horizontally
+# Ctrl + b + x to close the current pane
