--- a/files/Makefile
+++ b/files/Makefile
@@ -1,8 +1,12 @@
-CONFIG_DIRS = applications backgrounds bash dirs fonts git nvim tmux
+CONFIG_DIRS = applications backgrounds bash dirs fonts git nvim tmux zsh
+
+.PHONY: all clean profiles
 
 all:
 	stow --verbose --restow --target=$(HOME) $(CONFIG_DIRS)
-	dconf load /org/gnome/terminal/ < terminal-profiles.dconf
+
 clean:
 	stow --verbose --delete --target=$(HOME) $(CONFIG_DIRS)
-	dconf reset -f /org/gnome/terminal/legacy/profiles:/
+
+profiles:
+	dconf load /org/gnome/terminal/ < terminal-profiles.dconf
