--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,5 @@
 [defaults]
 localhost_warning = false
 
-[privilege_escalation]
-become_method = su
-become_user = root
-become_ask_pass = true
+[inventory]
+inventory_unparsed_warning=False
